--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,12 @@
     <color name="colorPrimary">#e52629</color>
     <color name="colorPrimaryDark">#e7392a</color>
     <color name="colorAccent">#ec672c</color>
+    <color name="colorHint">#757575</color>
+    <color name="colorGray200">#eeeeee</color>
 
     <color name="mappls_demo_white">#FFFFFF</color>
     <color name="mappls_demo_black">#000000</color>
+
+    <color name="colorGray300">#e0e0e0</color>
+    <color name="colorGray500">#9e9e9e</color>
 </resources>
