--- a/app/src/main/res/layout/activity_credential.xml
+++ b/app/src/main/res/layout/activity_credential.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:id="@+id/main"
         android:fillViewport="true"
         android:background="@color/colorPrimary"
         android:focusable="true">
